compiler/testdata/invalid/invalid_use.pr
// Use after declarations (use must come before declarations).
main() {}
use io "std/io";
